# sample_GithubCopilot

./: .editorconfig  README.md  SETUP.md  pyproject.toml  requirements.txt
.github/: PROMPTS.md  copilot-instructions.md
